--- a/nero/css/style.css
+++ b/nero/css/style.css
@@ -3553,7 +3553,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: #f44336;
   font-weight: 600;
   font-family: 'Montserrat';
   text-decoration: none;
@@ -3563,6 +3563,10 @@ a {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
+
+
+
+
 a:hover,
 a:focus {
   color: #2a6496;
