--- a/nero/css/style.css
+++ b/nero/css/style.css
@@ -1115,7 +1115,7 @@ address {
     width: 25%;
   }
   .col-lg-2 {
-    width: 16.66666667%;
+    width: 20%;
   }
   .col-lg-1 {
     width: 8.33333333%;
@@ -4396,6 +4396,12 @@ select {
 #footer .sponsors .sponsor-logo {
   padding: 21px 0;
 }
+
+.spon{
+  margin-left: 30px;
+}
+
+
 #footer .sponsors .sponsor-logo img {
   opacity: .4;
   -webkit-transition: all 0.2s ease-in-out;
@@ -4420,11 +4426,11 @@ select {
 }
 #footer .copyrights {
   padding: 16.2px 0;
-  background: #2b2c2d;
+  background: transparent;
 }
 #footer .copyrights p {
   margin: 0;
-  color: white;
+  color: #8b8989;
 }
 /* WIDGETS */
 .twitter-widget {
@@ -4460,7 +4466,7 @@ select {
   width: 70px;
   height: 70px;
   text-align: center;
-  background: #0b9444;
+  background: #ff5722;
   border-radius: 50%;
 }
 #back-to-top i {
