--- a/nero/css/style.css
+++ b/nero/css/style.css
@@ -6883,10 +6883,10 @@ margin: 0px auto 15px;
     height: 36px;
     border-radius: 50%;
     display: block;
-    color: #ffffff;
+    color: #222222;
     font-size: 16px;
     line-height: 36px;
-    border: 1px solid #fff;
+    border: 1px solid #222222";
 }
 .team_social > li > a:hover{
     background: #e67e22;
